removed the Activity reliance for location updates